ChangeLog 'ClusteringSuite'

YYYY-MM-DD  John Doe  <johndoe@example.com>

	* myfile.ext (myfunction): my changes made
	additional changes

	* myfile.ext (unrelated_change): my changes made
	to myfile.ext but completely unrelated to the above

	* anotherfile.ext (somefunction): more changes

2011-12-13 Juan Gonzalez <juan.gonzalez@bsc.es>
	* Modifications to print same timing information in TreeDBSCAN and
	BurstClustering

2011-12-13 Juan Gonzalez <juan.gonzalez@bsc.es>
	* Added sampling support to trace data extraction (parameter '-m' to burst
	clustering binary). That includes a modification on ClusteringAlgorithm
	class which imposes the extension of Classifier class

	* Modification in CGAL building system to avoid search of default paths

	* Added microsecond resolution to Timer class

2011-11-30 Juan Gonzalez <juan.gonzalez@bsc.es>
	* Solved a minor bug to correctly distribute 'draw_hulls' script

2011-11-30 German Llort <german.llort@bsc.es>
	* -frounding-math is used everywhere when using CGAL
	
	* Added GetClusterIDs() method in libDistributedClustering API

	* Added Size() And Flush() methods to HullModel

	* Changed ours CGAL's kernel precision from float to double

	* Moved the generation of output files from the generic ClusteringBackend
	to its derived classes (new virtual method ProcessResults())

	* Tree_DBSCAN_env.sh now updates the PATH variable

	* Added script 'draw_hulls'

	* Added some missing BSC headers and debug messages

2011-11-25 German Llort <german.llort@bsc.es>
	* Modified Makefile to include HullManager in TreeDBSCAN filter.

	* Modified configure.ac.template to include BOOST_LDPATH in
	CGAL_DYNAMIC_PATH.

2011-11-24 German Llort <german.llort@bsc.es>
	* Added a new filter to exchange the global clustering dimensions in 
	TreeDBSCAN

2011-11-24 Juan Gonzalez <juan.gonzalez@bsc.es>
	* Added a facade object 'HullModel' to make transparent the 
	'ConvexHullModel' object. *Some memory leaks regarding the 'HullModel'